# pin-unpin-tab

./: .babelrc  .editorconfig  .eslintrc.json  .gitignore  .ocamlformat  AMO description.txt  README-reviewers.md  README.md  background-script.js  bg.ml  bsconfig.json  build-source-pkg-for-reviewers.sh  build.sh  common.ml  content-script.js  dom_api.ml  dune  dune-project  dune-workspace  dune.mel  ff_webext_api.mli  ffext.ml  flake.nix  form.ml  lib.mli  long-click.js  long_click.ml  long_click.mli  manifest.json  options.html  options.js  package-lock.json  package.json  pin-unpin-tab.opam  preferences.html  preferences.js  prefs.ml  reviewers-README.md  run-dev.sh  shell.nix  (+6 more)
js-edition/: background-script.js  preferences.js
lib/: main.js
options/: options.html  options.js
releases/: pin-unpin-tab-2.0-unsigned.xpi  pin-unpin-tab-3.0-unsigned.xpi  pin-unpin-tab-3.1-unsigned.xpi  pin-unpin-tab-3.2-unsigned.xpi  pin-unpin-tab-3.3-unsigned.xpi  pin-unpin-tab-3.5.xpi  pin_unpin_tab-3.0-unsigned.xpi
src/: bg.ml  common.ml  dom_api.ml  dune  ffext.ml  hotkey.js  js_api.ml  long_click.ml  manifest.json  preferences.html  preferences.ml  prefs.js  rxjs.ml  style.css
src/background/: background.js
src/content/: content.js
src/options/: options.html  options.js
tools/: renameArtifact.js
