;; we start by ignoring node_modules. if you need to consume an OCaml
;; project from `node_modules`, this should work:
;; - remove the `dirs` stanza below
;; - add a `(subdir node_modules (dirs only_your_package))`
; (dirs :standard \ node_modules)

(subdir
 node_modules
 (vendored_dirs reason-promise)
 (dirs reason-promise)
 (subdir
  reason-promise
  (subdir
   src
   (subdir
    js
    (library
     (name reason_promise)
     (wrapped false)
     (modes melange)
     (preprocess
      (pps melange.ppx)))))))
